refactor for style

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
   <color name="secondaryDarkColor">#009a8a</color>
   <color name="primaryTextColor">#000000</color>
   <color name="secondaryTextColor">#000000</color>
+  <color name="white">#fff</color>
 </resources>
