--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="@dimen/margin"
     tools:context="com.example.andrpid.helloandroid.MainActivity">
 
 
@@ -12,48 +13,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
+        android:contentDescription="@string/business_name"
+        android:paddingStart="@dimen/padding"
+        android:paddingEnd="@dimen/padding"
         android:src="@drawable/udacity_banner_light"
-        android:background="#FFF"
+        android:background="@color/white"
         android:scaleType="fitCenter"/>
 
      <TextView
          android:layout_width="match_parent"
          android:layout_height="0dp"
-         android:layout_weight="0.5"
+         android:layout_weight="@dimen/text_weight"
          android:gravity="center"
          android:autoLink="map"
-         android:paddingLeft="8dp"
-         android:paddingTop="8dp"
+         android:paddingTop="@dimen/padding"
+         android:paddingBottom="@dimen/padding"
          android:background="@color/primaryColor"
          android:text="@string/address1"
-         android:textSize="22sp"
+         android:textSize="@dimen/font"
          android:textColor="@color/primaryTextColor"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="@dimen/text_weight"
         android:gravity="center"
         android:autoLink="map"
-        android:paddingLeft="8dp"
-        android:paddingTop="8dp"
+        android:paddingBottom="@dimen/padding"
         android:background="@color/primaryColor"
         android:text="@string/address2"
-        android:textSize="22sp"
+        android:textSize="@dimen/font"
         android:textColor="@color/primaryTextColor"/>
      <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="@dimen/text_weight"
         android:gravity="center"
         android:autoLink="phone"
         android:textColorLink="@color/primaryTextColor"
-        android:paddingLeft="8dp"
-        android:paddingTop="8dp"
+        android:paddingBottom="@dimen/padding"
         android:background="@color/primaryColor"
         android:text="@string/phone"
-        android:textSize="22sp"
+        android:textSize="@dimen/font"
         android:textColor="@color/primaryTextColor"/>
     <TextView
         android:layout_width="match_parent"
@@ -63,16 +63,16 @@
         android:textColor="@color/primaryTextColor"
         android:autoLink="web"
         android:textColorLink="@color/primaryTextColor"
-        android:paddingLeft="8dp"
-        android:paddingTop="8dp"
         android:background="@color/primaryColor"
         android:text="@string/website"
-        android:textSize="22sp"/>
+        android:textSize="@dimen/font"/>
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/promo"
         android:layout_weight="1"
+        android:paddingStart="60dp"
         android:paddingLeft="60dp"
         android:src="@drawable/images"
         android:scaleType="centerCrop"/>
